--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <script>
     function call() {
       // hasil = window.location.href = "tel:+6281234567890";
-      // tel = document.getElementById("inputKode").value;
-      window.location.href = 'tel:+6212121212';
+      tel = document.getElementById("inputKode").value;
+      window.location.href = 'tel:'+tel;
       // document.getElementById("test").innerHTML = tel;
     }
   </script>
